--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
 
     <div class="row">
       <section class="list list-inline"
-               ng-repeat="list in listsCtrl.lists"
-               ng-controller="listCtrl as listCtrl">
+               ng-repeat="list in listsCtrl.lists">
         <h1>{{list.listName}}</h1>
 
       </section>
@@ -41,6 +40,5 @@
   <script src="js/app.js"></script>
   <script src="js/factories/listFactory.js"></script>
   <script src="js/controllers/listsCtrl.js"></script>
-  <script src="js/controllers/listCtrl.js"></script>
 </body>
 </html>
